// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CounterContainer test should render abovezero 1`] = `
.c0 {
  font-size: 24px;
  color: black;
  font-weight: bold;
  color: green;
}

<div>
  <div
    class="c0"
    type="abovezero"
  >
    4
  </div>
</div>
`;

exports[`CounterContainer test should render lesszero 1`] = `
.c0 {
  font-size: 24px;
  color: black;
  font-weight: bold;
  color: indianred;
}

<div>
  <div
    class="c0"
    type="lesszero"
  >
    -1
  </div>
</div>
`;

exports[`CounterContainer test should render zero 1`] = `
.c0 {
  font-size: 24px;
  color: black;
  font-weight: bold;
  color: black;
}

<div>
  <div
    class="c0"
    type="zero"
  >
    0
  </div>
</div>
`;
